--- a/reservations.html
+++ b/reservations.html
@@ -22,7 +22,7 @@
         <a href="index.html"><strong>Home</strong></a>&nbsp;&nbsp;
         <a href="yurt.html"><strong>Yurts</strong></a>&nbsp;&nbsp;
         <a href="activities.html"><strong>Activities</strong></a>&nbsp;&nbsp;
-        <a href="Reservations.html"><strong>Reservations</strong></a>&nbsp;&nbsp;
+        <a href="reservations.html"><strong>Reservations</strong></a>&nbsp;&nbsp;
     </nav>
 
 
